--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+.MainContainer {
+    display: flex;
+    flex-direction: column;
+    border: 2px pink solid;
+    min-height: 100vh;
+}
+
 nav {
     border: 2px #31493C solid;
     height: 50px;
@@ -6,17 +13,20 @@ nav {
 .Content {
     border: 2px red solid;
     display: flex;
-    justify-content: space-around;
+    flex: 1;
 }
 
 .Left {
     border: 2px greenyellow solid;
+    flex-basis: 20%
 }
 
 .Center {
     border: 2px blue solid;
+    flex-grow:1;
 }
 
 .Right {
     border: 2px yellow solid;
+    flex-basis: 20%
 }
