--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+/* https://www.w3schools.com/cssref/css_selectors.asp */
+
 html, body, .MainContainer {
     height: 100%;    
     color: #31493C;    
