--- a/style.css
+++ b/style.css
@@ -2,8 +2,9 @@
 {
     display: table;
     width: 100%; /*Optional*/
-    table-layout: fixed; /*Optional*/
+   
     border-spacing: 10px; /*Optional*/
+    justify-content: space-between;
 }
 .Left
 {
@@ -14,6 +15,7 @@
 {
     display: table-cell;
     background-color: blue; /*Optional*/
+    flex: flex-grow;
 }
 .Right
 {
